examples/test/testpolicy19983.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19983
  namespace: namespace312
spec:
  podSelector:
    matchLabels:
      key1: value44
      key34: value5
      key37: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value43
      podSelector:
        matchLabels:
          key44: value47
          key27: value24
          key23: value25
